update to doc to prettify it and continue tutorials

--- a/doc/customdoxygen.css
+++ b/doc/customdoxygen.css
@@ -1456,3 +1456,33 @@ tr.heading h2 {
   text-justify: left;
   vertical-align: bottom;
 }
+
+tbody{
+  text-align: left;
+}
+
+.qindex{
+  margin-left: 10px; 
+}
+
+.qindexHL{
+  margin-left: 10px; 
+  margin-right: 10px; 
+}
+
+#MSearchResults {
+  width: 100% !important;
+}
+
+#search-close {
+  position: absolute;
+  z-index: 999;
+  right: 0;
+  height: 100%;
+  margin-right: 10px;
+}
+
+#search-box {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
