--- a/doc/template/html/header.html
+++ b/doc/template/html/header.html
@@ -1,45 +1,66 @@
 <!-- HTML header for doxygen 1.8.8-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- For Mobile Devices -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
-    <meta name="generator" content="Doxygen $doxygenversion"/>
-    
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    
-    <!--BEGIN PROJECT_NAME--><title>$projectname: $title</title><!--END PROJECT_NAME-->
-    <!--BEGIN !PROJECT_NAME--><title>$title</title><!--END !PROJECT_NAME-->
-    <script type="text/javascript" src="$relpath^dynsections.js"></script>
-    $treeview
-    $search
-    $mathjax
-    <link rel="icon" href="numscale_icon.png">
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link href="$relpath^$stylesheet" rel="stylesheet" type="text/css" />
-    $extrastylesheet
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="$relpath^numscale.js"></script>
-</head>
-<body>
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <div class="navbar-header responsive-logo"/>
-                <a class="navbar-brand" href="https://github.com/NumScale/boost.simd">$projectname $projectnumber</a>
-                <a target="_blank" href="http://www.numscale.com/" title="Numscale" class="pull-right" style="width: 25%">
-                    <img src="$projectlogo" alt="Numscale" style="width:100%; padding-top: 10px; padding-bottom: 10px; " align="right">
-                </a>
-            </div>
-        </div>
-    </nav>
-    <div id="top"><!-- do not remove this div, it is closed by doxygen! -->
-        <div class="content" id="content">
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!-- For Mobile Devices -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
+        <meta name="generator" content="Doxygen $doxygenversion"/>
+
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+        <!--BEGIN PROJECT_NAME--><title>$projectname: $title</title><!--END PROJECT_NAME-->
+        <!--BEGIN !PROJECT_NAME--><title>$title</title><!--END !PROJECT_NAME-->
+        <script type="text/javascript" src="$relpath^dynsections.js"></script>
+        $treeview
+        $search
+        $mathjax
+        <link rel="icon" href="numscale_icon.png">
+        <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+        <link href="$relpath^$stylesheet" rel="stylesheet" type="text/css" />
+        <link href="$relpath^$stylesheet" rel="stylesheet" type="text/css" />
+        $extrastylesheet
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="$relpath^ns.js"></script>
+        <script type="text/javascript" src="$relpath^custom.js"></script>
+    </head>
+    <body>
+        <nav class="navbar navbar-default" role="navigation">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 panel " style="padding-bottom: 35px;">
-                        <div style="margin-bottom: 15px;">
-                    <!-- end header part -->
+                <div class="navbar-header responsive-logo"/>
+                    <a class="navbar-brand" href="http://developer.numscale.com/">
+                        <span>$projectname</span>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                $projectnumber <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li role="separator" class="divider"></li>
+                                <li><a href="versions.html">Older versions</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a target="_blank" id="right-logo" href="http://www.numscale.com/" title="Numscale">
+                                <img height=60 src="$projectlogo" alt="Numscale">
+                            </a>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div>
+        </nav>
+        <div id="top"><!-- do not remove this div, it is closed by doxygen! -->
+            <div class="content" id="content">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 panel " style="padding-bottom: 35px;">
+                            <div style="margin-bottom: 15px;">
+<!-- end header part -->
