doc: Add id to versions dropdown element

--- a/doc/template/html/header.html
+++ b/doc/template/html/header.html
@@ -41,7 +41,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 $projectnumber <span class="caret"></span>
                             </a>
-                            <ul class="dropdown-menu">
+                            <ul id="dropdown-versions" class="dropdown-menu">
                                 <li role="separator" class="divider"></li>
                                 <li><a href="versions.html">Older versions</a></li>
                             </ul>
