--- a/doc/template/html/header.html
+++ b/doc/template/html/header.html
@@ -37,14 +37,8 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                $projectnumber <span class="caret"></span>
-                            </a>
-                            <ul id="dropdown-versions" class="dropdown-menu">
-                                <li role="separator" class="divider"></li>
-                                <li><a href="versions.html">Older versions</a></li>
-                            </ul>
+                        <li id="version">
+                            <a href="#">$projectnumber</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
