doc: Remove mouse integration for version anchor

--- a/doc/template/html/header.html
+++ b/doc/template/html/header.html
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li id="version">
-                            <a href="#">$projectnumber</a>
+                            <a href="#" class="disabled">$projectnumber</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
