Fix doc for doxygen >= 1.8.11

--- a/doc/template/html/header.html
+++ b/doc/template/html/header.html
@@ -10,6 +10,7 @@
         <meta name="generator" content="Doxygen $doxygenversion"/>
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.1/jquery.smartmenus.js"></script>
 
         <!--BEGIN PROJECT_NAME--><title>$projectname: $title</title><!--END PROJECT_NAME-->
         <!--BEGIN !PROJECT_NAME--><title>$title</title><!--END !PROJECT_NAME-->
