Doxygen fix (for version >= 1.8.12) (#441)
* Fix doc for doxygen >= 1.8.11

* doxygen: wait_for_smartmenus -> doxygen_fixup

* doxygen: 1.8.11 -> 1.8.12

* doc: Make detailed page prettier

--- a/doc/template/css/ns.css
+++ b/doc/template/css/ns.css
@@ -141,12 +141,10 @@ td.mempage {
 }
 
 .memTemplParams,
-.memtemplate {
-    font-size: 100%;
-}
-
+.memtemplate,
 .memname {
-    margin-left: 9px;
+    font-size: 100%;
+    margin-left: 0px;
 }
 
 div.textblock h3 {
@@ -156,4 +154,14 @@ div.textblock h3 {
     padding: 10px 15px;
     border: 1px solid #ddd;
     background-color: #f5f5f5;
+}
+
+#main-menu {
+    visibility: hidden;
+}
+
+.ns-fun-decl {
+    padding: 10px;
+    padding-left: 0px;
+    font-size: 2em;
 }
